@@ -29,6 +29,7 @@ public class CliCompleter extends SimpleCompletor
             "quit",
             "show cluster name",
             "show keyspaces",
+            "show schema",
             "show api version",
             "create keyspace",
             "create column family",
@@ -45,6 +46,7 @@ public class CliCompleter extends SimpleCompletor
             "help quit",
             "help show cluster name",
             "help show keyspaces",
+            "help show schema",
             "help show api version",
             "help create keyspace",
             "help create column family",
